# CGLProject3

./: .clang-format  .gitignore  CMakeLists.txt  TechnicalDocument.md
assets/TrackFiles/: demo.txt  makeSense.txt  realShit.txt  realShit2.txt  realShit3.txt
assets/models/fighterJet/: license.txt  scene.gltf
assets/models/mcMinecart/: license.txt
assets/models/minecraftFox/: Fox.fbx
assets/models/minecraftGhast/: ghast.mtl  license.txt  scene.gltf
assets/models/minecraftMinecart/: scene.gltf
assets/models/minecraftTNTBall/: license.txt  scene.gltf
assets/models/soldier/: license.txt  scene.gltf
assets/models/tunnel/: license.txt  scene.gltf
assets/shaders/: colorfulChurch.frag  colorfulChurch.vert  crosshatch.frag  edgeDetection.frag  fractal.frag  fractal.vert  fxaa.frag  grayscale.frag  heightMapWave.frag  heightMapWave.vert  model.frag  model.vert  odenBump.frag  odenBump.vert  paint.frag  pixelization.frag  pointShadowDepth.frag  pointShadowDepth.vert  reflection.frag  reflection.vert  simple.frag  simple.vert  simpleChurch.frag  simpleChurch.vert  sineWave.frag  sineWave.vert  skybox.vert  snowflake.frag  snowflake.vert  stipple.frag  terrain.frag  terrain.vert  toon.frag  totem.frag  totem.vert
include/glad4.6/include/glad/: glad.h
lib/Debug/: assimp-vc142-mtd.lib
lib/Release/: assimp-vc142-mt.lib
src/: CallBacks.H  CallBacks.cpp  ControlPoint.cpp  FrameBuffer.hpp  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp
src/RenderUtilities/: Mesh.h  Model.h  Shader.h  Texture.h  Vertex.h
src/Shaders/: Church.hpp  FrameBuffer.hpp  Skybox.hpp  Water.cpp  Water.hpp
src/Stuffs/: ModelActors.cpp  ModelActors.hpp  SubdivisionSphere.cpp  SubdivisionSphere.hpp  Terrain.hpp  TotemOfUndying.hpp
src/Utilities/: 3DUtils.cpp  ArcBallCam.H  ArcBallCam.cpp  Pnt3f.H  Pnt3f.cpp
